test_reports/2025-10-23_21-04-02_failed.txt
================================================================================
Risk Manager V34 - Test Report
================================================================================
Test Run: All tests
Timestamp: 2025-10-23 21:04:02
Status: FAILED
Exit Code: 1
================================================================================

[1m============================= test session starts ==============================[0m
platform linux -- Python 3.13.7, pytest-8.4.2, pluggy-1.6.0 -- /mnt/c/Users/jakers/Desktop/risk-manager-v34/.venv/bin/python
cachedir: .pytest_cache
rootdir: /mnt/c/Users/jakers/Desktop/risk-manager-v34
configfile: pyproject.toml
plugins: anyio-4.11.0, asyncio-1.2.0, cov-7.0.0, mock-3.15.1
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
[1mcollecting ... [0mcollected 19 items

tests/unit/test_core/test_events.py::TestEventBus::test_create_event_bus [32mPASSED[0m[32m [  5%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_subscribe_to_event [31mFAILED[0m[31m [ 10%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_subscribe_multiple_callbacks [31mFAILED[0m[31m [ 15%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_unsubscribe_from_event [31mFAILED[0m[31m [ 21%][0m
tests/unit/test_core/test_events.py::TestRiskEvent::test_create_event [31mFAILED[0m[31m [ 26%][0m
tests/unit/test_core/test_events.py::TestRiskEvent::test_event_has_timestamp [31mFAILED[0m[31m [ 31%][0m
tests/unit/test_core/test_events.py::TestEventType::test_event_types_exist [31mFAILED[0m[31m [ 36%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerBasics::test_tracker_initializes [32mPASSED[0m[31m [ 42%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerBasics::test_get_daily_pnl_returns_zero_for_new_account [32mPASSED[0m[31m [ 47%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerBasics::test_add_trade_pnl_updates_daily_total [32mPASSED[0m[31m [ 52%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerPersistence::test_pnl_survives_restart [32mPASSED[0m[31m [ 57%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerPersistence::test_multiple_accounts_tracked_independently [32mPASSED[0m[31m [ 63%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerReset::test_reset_clears_daily_pnl [32mPASSED[0m[31m [ 68%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerReset::test_different_dates_tracked_separately [32mPASSED[0m[31m [ 73%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerTradeCount::test_trade_count_increments [32mPASSED[0m[31m [ 78%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerTradeCount::test_trade_count_resets_with_pnl [32mPASSED[0m[31m [ 84%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerEdgeCases::test_handles_zero_pnl_trades [32mPASSED[0m[31m [ 89%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerEdgeCases::test_handles_large_pnl_values [32mPASSED[0m[31m [ 94%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerEdgeCases::test_get_all_account_pnls [32mPASSED[0m[31m [100%][0m

=================================== FAILURES ===================================
[31m[1m_____________________ TestEventBus.test_subscribe_to_event _____________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:29: in test_subscribe_to_event
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m________________ TestEventBus.test_subscribe_multiple_callbacks ________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:48: in test_subscribe_multiple_callbacks
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m___________________ TestEventBus.test_unsubscribe_from_event ___________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:63: in test_unsubscribe_from_event
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m_______________________ TestRiskEvent.test_create_event ________________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:74: in test_create_event
    [0m[96mtype[39;49;00m=EventType.TRADE_EXECUTED,[90m[39;49;00m
         ^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   AttributeError: type object 'EventType' has no attribute 'TRADE_EXECUTED'[0m
[31m[1m____________________ TestRiskEvent.test_event_has_timestamp ____________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:84: in test_event_has_timestamp
    [0mevent = RiskEvent([90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m_____________________ TestEventType.test_event_types_exist _____________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:99: in test_event_types_exist
    [0mEventType.ORDER_UPDATED,[90m[39;49;00m
    ^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   AttributeError: type object 'EventType' has no attribute 'ORDER_UPDATED'. Did you mean: 'ORDER_PLACED'?[0m
[33m=============================== warnings summary ===============================[0m
tests/unit/test_state/test_pnl_tracker.py: 12 warnings
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/src/risk_manager/state/database.py:82: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    (1, datetime.utcnow().isoformat()),

tests/unit/test_state/test_pnl_tracker.py: 23 warnings
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/src/risk_manager/state/pnl_tracker.py:63: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    now = datetime.utcnow().isoformat()

tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerReset::test_reset_clears_daily_pnl
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerTradeCount::test_trade_count_resets_with_pnl
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/src/risk_manager/state/pnl_tracker.py:194: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    now = datetime.utcnow().isoformat()

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
[36m[1m=========================== short test summary info ============================[0m
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventBus::test_subscribe_to_event[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventBus::test_subscribe_multiple_callbacks[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventBus::test_unsubscribe_from_event[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestRiskEvent::test_create_event[0m - AttributeError: type object 'EventType' has no attribute 'TRADE_EXECUTED'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestRiskEvent::test_event_has_timestamp[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventType::test_event_types_exist[0m - AttributeError: type object 'EventType' has no attribute 'ORDER_UPDATED'. D...
[31m================== [31m[1m6 failed[0m, [32m13 passed[0m, [33m37 warnings[0m[31m in 4.19s[0m[31m ===================[0m


================================================================================
End of Report
================================================================================
